# data-engineering-bootcamp

00-bootcamp-project/: deb2-200018-deb2-loading-data-to-gcs-then-bigquery.json  deb2-200018-deb2-loading-data-to-gcs.json  extract-api.py  extract-postgres.py  load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  main-api.py  main-postgres.py  main-sftp.py  main.py  test.py
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  extract.py  load.sh
02-data-warehouse-and-google-bigquery/examples/loading-data-to-bigquery-from-local/: deb2-200018-deb2-loading-data-to-bigquery.json  load_table_from_csv.py
playground/: main.py  pyproject.toml
