[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Patcharapon Chaiporn <78648499+oatty982@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
